--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                  <img src="resources/tessell.png" alt="logo" class="logo" id="mjoLogo">
             </div>
             <div class="commentary" id="mjoCommentary">
-                <p>blah blah blah</p>
+                <p></p>
             </div>
         </div>
         <div class="section-container">
             <div class="commentary">
-                <p id="qalCommentary">blah blah blah</p>
+                <p id="qalCommentary"></p>
             </div>
             <div class="chart-container">
                 <canvas id="qalChart"></canvas>
@@ -36,12 +36,12 @@
                 <img src="resources/tessell.png" alt="logo" class="logo">
             </div>
             <div class="commentary">
-                <p id="empCommentary">blah blah blah</p>
+                <p id="empCommentary"></p>
             </div>
         </div>
         <div class="section-container">
             <div class="commentary">
-                <p id="heCommentary">blah blah blah</p>
+                <p id="heCommentary"></p>
             </div>
             <div class="chart-container">
                 <canvas id="heChart"></canvas>
